<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_portfolio_title">My Nanodegree Apps!</string>
    <string name="app_spotify_streamer_name">Spotify Streamer</string>
    <string name="app_scores_name">Scores App</string>
    <string name="app_library_name">Library App</string>
    <string name="app_build_it_bigger_name">Built It Bigger</string>
    <string name="app_xyz_reader_name">XYZ Reader</string>
    <string name="app_capstone_my_own_app_name">Capstone: My Own App</string>
    <string name="display_app_message">This button will lunch </string>
</resources>
